fix images on safari

--- a/src/components/Cards/Card.css
+++ b/src/components/Cards/Card.css
@@ -19,6 +19,7 @@
 .movie-image {
     border-radius: 20px;
     margin-bottom: 20px;
+    max-width: 100%;
 }
 
 .card-title {
